working code can be pushed to development pipeline

--- a/event-management-frontend/index.html
+++ b/event-management-frontend/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UniEvents - College Event Management</title>
-    <meta name="description" content="Modern college event management system with QR code attendance tracking" />
-    <meta name="author" content="UniEvents" />
+    <title>UniPal MIT - MAHE Event Companion</title>
+    <meta name="description" content="Unified event management for MAHE's Manipal Institute of Technology with QR attendance and role-based workflows." />
+    <meta name="author" content="UniPal MIT" />
 
-    <meta property="og:title" content="UniEvents - College Event Management" />
-    <meta property="og:description" content="Modern college event management system with QR code attendance tracking" />
+    <meta property="og:title" content="UniPal MIT - MAHE Event Companion" />
+    <meta property="og:description" content="Unified event management for MAHE's Manipal Institute of Technology with QR attendance and role-based workflows." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@MITManipal" />
+    <meta name="twitter:image" content="/placeholder.svg" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
